welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:3: error: illegal start of simple pattern
var :Boolean vuBiscuit
    ^Program:4: error: '=' expected but ';' found.
while (vuBiscuit=false){
^