welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {var :Boolean vuBiscuit
while (vuBiscuit=false){
for (x<-1 to 6) {avance;
	if(estSurBiscuit) vuBiscuit=1}
for (x<-1 to 6) recule;
}
}